--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -48,7 +48,7 @@
             <a class = "btn_add" href="/add/">Add a new expense</a>
         </div>   
         <div class= "btn_budget_container">
-            <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget for 2023</a>
+            <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_budget" href="/budget/">Set your max budget</a>
         </div>
         <div class="typewiter"  id= "budget">
             <h2 >Initial Budget</h2>
@@ -60,7 +60,7 @@
         </div>
         <div class="typewiter" id= "leftover">
             <h2>Current Budget</h2>
-            <h2 class="type" > $ {{leftover}}</h2>
+            <h3 class="type" > $ {{leftover}}</h3>
         </div>
     </div>
     {% endif %}
@@ -71,7 +71,7 @@
             <a class = "btn_add" href="/add/">Add a new expense</a>
         </div>   
         <div class= "btn_budget_container">
-            <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget for 2023</a>
+            <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_budget" href="/budget/">Set your max budget</a>
         </div>
         <div class="typewiter" id= "placeholder_budget">
             <h2 >Initial Budget</h2>
