--- a/static/css/style.css
+++ b/static/css/style.css
@@ -210,22 +210,45 @@ body {
     box-shadow: 0 3px 10px purple;
    
 }
-.add_form_container {
+.main_form_container {
     display: flex;
     justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    
+    
 }
-.add_form {
-    padding: 5%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.form_des{
+    text-align: center;
+   
+    
+}
+.form_container {
+    border: solid 2px black;
+}
+.forms {
+
+    margin:20px;
+    font-size: 15px;
+    text-align: center;
+
     border: solid 1px black;
 }
-.btn_submit {
- 
 
+.btn_submit {
+    display: inline-block;
+    padding: 10px 20px;
+    margin-bottom:5px;
+    text-decoration: none;
+    text-align: center;
+    background-color: #0077cc;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
+    transition: all 0.3s ease-in-out;
+
+}
+.links {
+   
 }
 
 #about_container {
