--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,23 +1,31 @@
 
 
 {% extends "account/base.html" %}
-
+<div class = "links">
 {% load i18n %}
-
+</div>
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
+
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<div class="main_form_container">
+  <div class="form-container">
+    <div class="form_des">
+      <h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+      <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+    </div>
+    <div class = "forms">
+      <form class="add_form" id="signup_form" method="post" action="{% url 'account_signup' %}">
+        {% csrf_token %}
+        {{ form.as_p }}
+        {% if redirect_field_value %}
+        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+      </form>
+    </div>
+</div>
 
 {% endblock %}
