--- a/static/css/style.css
+++ b/static/css/style.css
@@ -224,6 +224,7 @@ body {
 .form_container {
     border: solid 2px black;
 }
+
 .forms {
 
     margin:20px;
@@ -247,7 +248,8 @@ body {
     transition: all 0.3s ease-in-out;
 
 }
-.links {
+#sign_out {
+    text-align: center;
    
 }
 
@@ -479,9 +481,8 @@ body {
    
 }
 
-#edit_link {
 
-}
+
 .typewiter{
    
 }
