--- a/templates/update_expenses.html
+++ b/templates/update_expenses.html
@@ -31,7 +31,7 @@
        <div class="main_form_container">
             <div class = "form_container">
                 <div class="form_des">
-                    <h2><strong>Edit Expense</strong></h2>>
+                    <h2><strong>Edit Expense</strong></h2>
                 </div>
 
                 <form class="forms"  method= "POST" >
