--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,33 +1,53 @@
 
 
 {% extends "account/base.html" %}
-<div class = "links">
+
 {% load i18n %}
-</div>
+
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 
 {% block content %}
-<div class="main_form_container">
-  <div class="form-container">
-    <div class="form_des">
-      <h1>{% trans "Sign Up" %}</h1>
+
+  <div class="form_container">
+
+   
+      <h2>{% trans "Sign Up" %}</h2>
 
 
       <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-    </div>
-    <div class = "forms">
-      <form class="add_form" id="signup_form" method="post" action="{% url 'account_signup' %}">
+
+  
+      <form class="all_forms" id="signup_form" method="post" action="{% url 'account_signup' %}">
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+        <button class = "btn_submit" type="submit">{% trans "Sign Up" %} &raquo;</button>
       </form>
+  </div>
+
+  <footer>
+    <div class = "sm_container">
+        <ul class="social_media">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
     </div>
-</div>
-
-
+  </footer>
+  <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+  <script src = "/static/main.js"></script>
+  
 {% endblock %}
 
