--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -44,10 +44,10 @@
     {% endif %}
 
 
-    <div id = "budget_title">
+    <div class = "title">
         <h1>Budget</h1>
       
-        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_budget" href="/budget/">Set your max budget</a>
+        <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget</a>
 
         
     </div>
@@ -91,7 +91,7 @@
 
     
     
-    <div id = "expenses_title">
+    <div class= "title">
         <h1>Expenses</h1>     
         <a class = "btn_add" href="/add/">Add a new expense</a>
     
