--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,7 +19,7 @@ body {
     margin: 5%;
     min-height: 250px;
     margin-top: 0px;
-    border:solid 4px black;
+    border:solid 3px black;
 
 }
 #budget_title {
@@ -45,6 +45,7 @@ body {
     width:15%;
     margin: 2%;
     max-height: 175px;
+    background-color: lightcyan;
   
     border: solid 2px black;
     border-radius: 25px;
@@ -52,6 +53,7 @@ body {
     
 }
 .expense_div h2 {
+    
     margin-top: 5%;
     border-bottom: black solid 2px;
     font-size: 1.5vw;
@@ -78,6 +80,7 @@ body {
     text-align: center;
     width:fit-content;
     background-color: #0077cc;
+    border: solid 2px black;
    
     color: #fff;
     border-radius: 5px;
@@ -253,6 +256,7 @@ body {
 }
 .form_container p {
     text-align: center;
+  
 
   
 }
@@ -268,7 +272,10 @@ body {
 }
 .all_forms p {
     margin-top: 1%;
+}
+#id_email {
    
+    display:none;
 }
 
 .btn_submit {
@@ -322,7 +329,7 @@ body {
 #text_box h2 {
     margin-top: 5%;
     margin-bottom: 5%;
-    font-size: 2.5vh;
+    font-size: 3vh;
 
 }
 #start {
@@ -393,7 +400,8 @@ body {
    
     color:black;
     background-color: lightcoral;
-    border:solid 2px black;
+    border:solid 3px black;
+    border-right:none;
     text-align: center;
 
 }
@@ -408,7 +416,8 @@ body {
     width:30%;
     color:black;
     background-color: lightgreen;
-    border:solid 2px black;
+    border:solid 3px black;
+    border-right:none;
     text-align: center;
 }
 .budget h2 {
@@ -423,7 +432,7 @@ body {
     text-align: center; 
     color:black;
     background-color: lightblue;
-    border:solid 2px black;
+    border:solid 3px black;
     text-align: center;
 }
 .leftover h2 {
