--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -28,6 +28,28 @@
         <button class = "btn_submit" class="primaryAction" type="submit">{% trans "Sign In" %}</button>
     
     </div>
+    
+    <footer>
+      <div class = "sm_container">
+      <ul class="social_media">
+          <li>
+              <a href="https://facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
+          </li>
+          <li>
+              <a href="https://twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
+          </li>
+          <li>
+              <a href="https://youtube.com" target="_blank" rel="noopener"><i class="fab fa-youtube-square"></i></a>
+          </li>
+          <li>
+              <a href="https://instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+          </li>
+      </ul>
+      </div>
+  </footer>
+  <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
+  <script src = "/static/main.js"></script>
+
 
 
 {% endblock %}
