--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -14,7 +14,7 @@
     <header >
         <div id="home">
 
-        <h1 id = "main">Expense Tracker</h1>
+        <h1 id = "main">SpendWise</h1>
         <nav>
             <ul id ="menu">
                 <li><a href="/">Home</a></li>
@@ -45,7 +45,7 @@
 
 
     <div class = "title">
-        <h1>Budget</h1>
+        <h1 class="title_h1">Budget</h1>
       
         <a  title="Add your 2023 budget, the total amount of your expenses will be subtracted from this budget" class ="btn_add" href="/budget/">Set your max budget</a>
 
@@ -92,7 +92,7 @@
     
     
     <div class= "title">
-        <h1>Expenses</h1>     
+        <h1 class="title_h1">Expenses</h1>     
         <a class = "btn_add" href="/add/">Add a new expense</a>
     
     </div>
