--- a/templates/add_expenses.html
+++ b/templates/add_expenses.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Add expense</title>
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <header id = "home">
 
-        <h1 id = "main">Expense Tracker</h1>
+        <h1 id = "main">SpendWise</h1>
         <nav>
             <ul id ="menu">
                 <li><a href="/">Home</a></li>
