--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/style.css">
-    <title>Document</title>
+    <title>Expenses</title>
 </head>
 <body>
     <div id = "type">
     
     </div>
     <header >
-        <div id="home">
-
+        <div id = "home">
         <h1 id = "main">SpendWise</h1>
         <nav>
             <ul id ="menu">
