--- a/static/css/style.css
+++ b/static/css/style.css
@@ -298,13 +298,8 @@ body {
 }
 
 #about_container {
-   
     display:flex;
     justify-content: space-evenly;
-   
-    
- 
-
 }
 #text_box {
     padding: 5%;
@@ -523,4 +518,81 @@ body {
     body{
        background-color: blue;
     }
+}
+
+#about_container {
+    display:flex;
+    justify-content: space-evenly;
+}
+#text_box {
+    padding: 5%;
+    width:45%;
+    font-family: cursive;
+   
+    color: black;
+
+}
+#text_box h1 {
+    font-size: 3vw;
+}
+#text_box p {
+    margin-top: 5%;
+    font-size: 1vw;
+
+}
+#text_box h2 {
+    margin-top: 5%;
+    margin-bottom: 5%;
+    font-size: 1.5vw;
+
+}
+#start {
+   
+    list-style: none;
+    display: inline;
+   
+    
+}
+#start li {
+ 
+    display: inline;
+}
+
+.start_buttons {
+    display: inline-block;
+    font-size: 1vw;
+    padding: 7.5px 15px;
+    height:fit-content;
+    
+    text-decoration: none;
+    text-align: center;
+    width:20%;
+    border: solid 1px black;
+    background-color: #0077cc;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.25);
+    transition: all 0.3s ease-in-out;
+}
+.start_buttons:hover {
+    box-shadow: 0 3px 10px purple;
+    
+}
+
+#image_container {
+    padding: 5%;
+    width:45%
+
+}
+#image_container img {
+   
+    width:80%;
+    border: 2px solid black;
+    border-radius: 60px; 
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); 
+}
+.contact {
+    background-color: #5ABCB9;
+    height:200px;
+    
 }
