add responsitivity to expenses page

--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -71,7 +71,7 @@
     <div class = "main_buttons_container">
             
        
-        <div class="typewite budget">
+        <div class="typewiter budget">
             <h2 >Initial Budget</h2>
             <h3 class="type" > $  </h3>
         </div>
@@ -112,11 +112,8 @@
 
 
     <div   class = "container">
-        
-    
+
         {% for expense in expenses %}   
-        
-        
     
         <div class="expense_div" >
             
