--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,7 +81,9 @@ body {
     padding: 3%;
     text-decoration: none;
     text-align: center;
+    font-size:0.75vw;
     width:fit-content;
+    height:fit-content;
     background-color: #0077cc;
     border: solid 2px black;
    
@@ -162,6 +164,7 @@ body {
 .btn_add_container {
     text-align: center;
     flex:1.5;
+    background-color: red;
    
 
 }
@@ -193,10 +196,12 @@ body {
 .btn_add{
     margin-top:1.5%;
     color:black;
-   
-    
     display: inline-block;
-    padding: 10px 20px;
+
+    padding: 5px 15px;
+    width: fit-content;
+    height:fit-content;
+    font-size: 1.5vw;
     text-decoration: none;
     text-align: center;
     background-color: #0077cc;
@@ -503,28 +508,57 @@ body {
 
 @media screen and (max-width: 1350px) {
     body {
-        background-color: red;
+       
         
       
     }
+    .placeholder_expense {
+        height: 150px;
+        min-height:fit-content;
+        width:25%;
+    }
 
 
-    #info-container {
-      
+    .expense_div {
+        width:25%;
+        height: 3px;
     }
 }
 
 @media screen and (max-width: 750px) {
-   
     
     body{
-       background-color: blue;
+       
     }
     #about_container {
-        
-        display:flex;
-       
-        flex-direction: column;
-        text-align: center;
+        width:100%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+
     }
+    .expense_div {
+        width:30%;
+        
+        
+        
+
+    }
+    .placeholder_expense {
+        height: 75px;
+        min-height:fit-content;
+       
+        width:30%;
+    }
+        
+    #text_box {
+        text-align: center;
+        padding: 5%;
+        width:70%;
+    }
+    #image_container{
+        text-align:center;
+    }
+    
+        
 }
