--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -97,7 +97,7 @@
     </div>
     {% if not user.is_authenticated %} 
    
-        <div class = "container">
+        <div class = "place_container">
            
             <div class= "placeholder_expense"></div>
             <div class= "placeholder_expense"></div>
