add wc3 html and css validation screenshots to testing.md

--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -11,7 +11,7 @@
     <div id = "type">
     
     </div>
-    <header >
+    <header>
         <div id = "home">
         <h1 id = "main">SpendWise</h1>
         <nav>
@@ -29,7 +29,7 @@
                 {% endif %}
             </ul>   
         </nav>
-        <div>
+        </div>
     </header>
     
     
@@ -79,7 +79,7 @@
             <h2>Total Expenses</h2>
             <h3 class="type" > $ </h3>
         </div>
-        <div class="typewiter leftover"  class="leftover">
+        <div class="typewiter leftover">
             <h2>Current Budget</h2>
             <h3 class="type" > $ </h3>
         </div>
@@ -130,7 +130,7 @@
         
         {% endfor %}
     {% endif %}
-   </div>
+   
   
     <footer>
         <div class = "sm_container">
