add some website features to readme

--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -127,6 +127,7 @@
             <a class="expense_buttons" href = "/delete/{{ expense.id }}">Delete</a>
             
         </div>
+    </div>
         
         {% endfor %}
     {% endif %}
