--- a/templates/expenses_page.html
+++ b/templates/expenses_page.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expenses</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 
 </head>
 <body>
@@ -152,7 +152,7 @@
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/c7dbda0798.js" crossorigin="anonymous"></script>
-    <script src = "/static/main.js"></script>
+    <script src = "../static/js/main.js"></script>
 
 
 
