--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,3 +1,5 @@
+
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href ={% static 'static/css/style.css' %}>
 </head>
 <body>
     <header id = "home">
