--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -1,3 +1,5 @@
+
+{% load static %}
 {% load i18n %}
 <!DOCTYPE html>
 <html>
@@ -5,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="../../static/css/style.css">
+  
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block extra_head %}
 
     {% endblock %}
